improve packages dosc
